21 pages are corrected

--- a/tex-for-print/anubandha-1.tex
+++ b/tex-for-print/anubandha-1.tex
@@ -825,6 +825,14 @@ satayx eMdu sArutAtxre:}
 \end{entry}
 
 \begin{entry}
+\word{tirxmuKadalilx tirxvidhAtamxBeVda}
+\src{va}
+\meaning{\arthanonum{AdhAyxtimxka sAdhane mADuvAga guru, liMga matutx jaMgama eMba mUru muKagaLige toVrisuva Bakitx:}
+\ullekha{EkamuKadalilx niravaya japa. divxmuKadalilx shakitxsaMpakaRyoVga. tirxmuKadalilx tirxvidhAtamxBeVda (savasaM. 8; parxsABoV. 29-15).}}
+\newmeaning{\ni{tarxyANAM muKAnAM samAhAraH - tirxmuKaM; tirxvidhAtamxBeVdaH; tirxvidhashacx asw AtAmx ca tirxvidhAtAmx - tirxvidhAtamxnaH BeVdaH - tirxvidhAtamxBeVdaH}}
+\end{entry}
+
+\begin{entry}
 \word{teVjada pUvARsharxyava kaLeyuvudu}
 \src{va}
 \meaning{\arthanonum{mAnava deVhada GaTakagaLalolxMdAda aginx (teVja) tatatxvXkekx
@@ -842,6 +850,15 @@ satayx eMdu sArutAtxre:}
  kaLedidAdxre (va.pa.koV. 183).}} 
 \end{entry}
 
+\begin{entry}
+\word{tA niMdalilx nijakUTa}
+\src{va}
+\meaning{\arthanonum{I pariBASege eraDu riVtiya athaRgaLanunx koDabahudu. (1) nAnu
+ eMba parxteyxVkatABAva hoVdare (niMdalilx) Aga Atamx-paramAtamxra
+ kUTa sAdhayx. (2) Atamx paramAtamxra kUTavanunx sAdhisalu
+ sAdhakanu beVrelilxyU hoVgade tAnu niMtalilxye sAdhisabahudu:}
+\ullekha{tA niMdalilxye nijakUTa, tiLidalilxye niraMgaveMbudu (savasaM. 5; moVLimA. 1161-345).}}
+\end{entry}
 
 %%%da
 \begin{entry}
