30 pages are corrected

--- a/tex-for-print/anubandha-1.tex
+++ b/tex-for-print/anubandha-1.tex
@@ -860,6 +860,47 @@ satayx eMdu sArutAtxre:}
 \ullekha{tA niMdalilxye nijakUTa, tiLidalilxye niraMgaveMbudu (savasaM. 5; moVLimA. 1161-345).}}
 \end{entry}
 
+\begin{entry}
+\word{tirxvidhaliMgada pUje}
+\src{kA}
+\meaning{\arthanonum{aSaTxvidhAcaRnegaLiMda iSaTxliMgakUkx, liMgadhAyxna mADutatx maMtarxvanunx japisuva mUlaka pArxNaliMgakUkx, mahAliMgadalilx saMpUNaR tanamxyateyiMda kUDi taqpitxgoLisuvudariMda BAvaliMgakUkx mADuva pUje:}
+\ullekha{tirxvidhaliMgada pUjeyeMteMdoDanuviniMdiSaTxliMgakekxyaSaTxvidhAcaRnA pUjeyeMda{\ri}vudu meVNu tadAdhxyXnadiM maMtarxmaM japipudeV pArxNaliMgada pUjeyA mahAliMgadoLagUNeyaMbogadA manoVliVyavAgi matetxVnuva{\ri}yada nishacxyapirxVNaneV BAvaliMgada pUjeyayayx (viVsheYpu. 8-129-23).}}
+\newmeaning{\ni{liMgasayx pUjA - liMgapUjA; tirxvidhA ca asw liMgapUjA ca - tirxvidhaliMgapUjA athavA tirxvidhasayx liMgasayx pUjA - tirxvidhaliMgapUjA}}
+\end{entry}
+
+\begin{entry}
+\word{terahilalxda paripUNaR}
+\src{va}
+\meaning{\arthanonum{paramAtamxnu BwtavasutxvAgirade cidavxsutxvAgiruvudariMda, hAgU A cidavxsutx elalx kaDeyalilxyU tuMbikoMDiruvudariMda adu terahilalxda paripUNaR enisikoLuLxtatxde (va.pa.koV. 183):}
+  \ullekha{terahilalxda mahAGana paripUNaR liMgaBaritaveMdeV BAvisi, pUjisi, maraLi bididxtutx keDeyitutx eMba ajAcnxnava noVDA! (savasaM. 3; cenanxba. 1275-449).}}
+\end{entry}
+
+\begin{entry}
+\word{terahilalxda Gana}
+\src{va}
+\meaning{\arthanonum{GanaveMdare citutx, arivu, parashiva. yAveraDu BwtavasutxgaLanunx tegedukoMDarU, avugaLa \hbox{madheyx} teravu irutatxde. teravilalxda yAvudeV eraDu BwtavasutxgaLanunx kalipxsikoLaLxlU sAdhayxvilalx. Adare arivu athavA
+citutx aKaMDavAgirutatxde. nananx citutx matutx nimamx citutxgaLa
+naDuve \hbox{teravu} iruvaMte Iga kANutatxdeyAdarU, anuBAva paDedavanige
+elalx AtamxgaLU vishAvxtamxna BAgagaLAgi kANutatxve. aSeTxV alalx, avanige
+BwtavasutxgaLalilxruva citUtx kANutatxde. aMdare, elalx Atamx\-gaLu hAgU
+vasutxgaLalilx avanige ceYtanayxveV kANutatxde. vasutxgaLalilx
+aneVkate hAgU veYvidhayx kaMDarU, avugaLalilxruva citutx oMdeV; adu
+aKaMDa. idanunx oMdu upameya mUlaka sapxSaTxpaDisabahudu. aneVka
+jAtiya hUgaLanunx oMdu dArada mUlaka mAle mADidAga, hUvu\-gaLu tamamx
+aneVkate hAgU veYvidhayxgaLanunx kaLedukoLuLxvudilalx. Adare
+avugaLalilxruva dAra mAtarx oMdeV. A dAradiMdAgiyeV avugaLalilx Ekate
+baMdiruvudu. hAgeyeV, Bwta hAgU cidavxsutx\-gaLalilx A parashivaniMdAgi
+Ekate mUDidAga avugaLalilx aneVkate hAgU veYvidhayx
+naSaTxvAguvudilalx. Adare avugaLalilx aMtasathxvAgiruva
+parashivanalilx veYvidhayxte athavA aneVkate ilalx. oMdu veVLe,
+parashivanu kelavu vasutxgaLalilx idudx, \hbox{inunx} kelavu vasutx\-gaLalilx
+iradidadxre, Aga cititxgU KaMDate ide enanxbahudAgitutx.}}
+\newmeaning{\arthanonum{jAcnxnigaLigU anuBAvigaLigU terahilalxda Gana kANisi\-koMDare
+ ajAcnxnigaLige, vasutxgaLa aneVkate matutx veYvidhayxdiMdAgi
+ terahilalxda Gana kANisuvudilalx (va.pa.koV. 182)}}
+%\newmeaning{\ni{tere (te{\re}) + hu - terahu}}
+\end{entry}
+
 %%%da
 \begin{entry}
 \word{dashavidha vAyugaLanunx nililxsuvudu}
