17 pages are corrected

--- a/tex-for-print/anubandha-1.tex
+++ b/tex-for-print/anubandha-1.tex
@@ -901,6 +901,7 @@ iradidadxre, Aga cititxgU KaMDate ide enanxbahudAgitutx.}}
 %\newmeaning{\ni{tere (te{\re}) + hu - terahu}}
 \end{entry}
 
+
 %%%da
 \begin{entry}
 \word{dashavidha vAyugaLanunx nililxsuvudu}
@@ -926,6 +927,44 @@ iradidadxre, Aga cititxgU KaMDate ide enanxbahudAgitutx.}}
 \ullekha{pArxNAdi vAyugaLa kaLedu BakatxrAdaremamxvaru - adeMteMdaDe : alalxlilxdaR dashavAyugaLa dashasAthxnadalilx nilisi Bakitxya mADuva pariya heVLihe keVLiraNANx (savasaM. 3; cenanxba. 1428-511).}}
 \end{entry}
 
+\begin{entry}
+\word{deVhada kale}
+\src{va}
+\meaning{\arthanonum{parashivana shakitxyu mAnavanalilx eraDu virudadhx dikukxgaLalilx
+vatiRsabalulxdu. adu liMgAMga sAmarasayxkekx sahAyakavAguvaMte
+vatiRsidare BakitxshakitxyeMdU matutx baMdhanada kaDege hoVguvaMte
+perxVreVpisidare kalAshakitxyeMdU hesaru paDeyutatxde. yAva
+dikikxnalilx shakitxyanunx koMDoyayxbeVkeMbudanunx sAdhakanu
+nidhaRrisabeVku. ``deVhada kale (kalAshakitx)yiruva tanaka iSaTxliMga
+saMbaMdha'' keVvala aupacArikaveV horatu, pariNAmakAriyalalx.}}
+\end{entry}
+
+\begin{entry}
+\word{deVhadeVhigaLa utapxtitxsathxla}
+\src{kA}
+\meaning{\arthanonum{nUroMdu sathxlagaLalilx oMdu; parameVshavxranu sakala jiVvarAshigaLanunx saqSiTxsidaneMbudanunx nirUpisuva sathxla:}
+\ullekha{deVhadeVhigaLa utapxtitxsathxla I parxkAradiM parameVshavxranu jagatetxlalxvanutapxtayxva mADidaneMbudaM parxtiSeThxyaMmADi nuDidamaRhApurAtanaru (gaNaBA. 103-1).}}
+\end{entry}
+
+\begin{entry}
+  \word{deVhaBAvashUnayx sharaNaliMga}
+\src{va}
+\meaning{\arthanonum{dhAyxnadalilx muLugi\-davanige tanagoMdu deVhavide eMba BAva
+ ilalxvAgutatxde. aSeTxV alalx, anuBAva mugida meVlU savaRvU
+ shivamayaveMdu tiLida avanige deVhaBAva shUnayxvAgutatxde. aMtha
+ sharaNaneV deVhaBAvashUnayx sharaNaliMga (va.pa.koV. 204):}
+\ullekha{deVhaBAvashUnayxsharaNaliMga - manaBAvashUnayx sharaNaliMga, pArxNaBAvashUnayx sharaNaliMga, savaRshUnayx sharaNa mahAliMga (savasaM. 12; deVshikeVM. 833-258).}}
+\newmeaning{\ni{deVhasayx BAvaH - deVhaBAvaH; teVna deVhaBAveVna shUnayxH, yaH sharaNaH saH Eva liMgaM - deVhaBAvashUnayxsharaNaliMgaM}}
+\end{entry}
+
+\begin{entry}
+\word{deVhAdigaLa adhAyxsa}
+\src{kA}
+\meaning{\arthanonum{oMdanunx matotxMdAgi BAvisuvudu Barxme. deVhakekx saMbaMdhapaTaTx mithAyxdhAyxsa, satAyxdhAyxsa, itarAdhAyxsa matutx itareVtarAdhAyxsagaLeMba nAlukx bageya Barxme\-gaLu:}
+\ullekha{tanuvidu tanonxLu sati mithAyxdhAyxsaveMdenipudu rajujx sapaRnavolu tanudhamaRvadu pariVkiSxsalu satAyxdhAyxsavenipudu divxjana divxjateyaMte itareVtarAdhAyxsavenipudu tanonxLapxrXkaqtiyA parxkaqtiyoLiralu tAnu ratiyiMde keVLiMdukAMta caMdarxmana suparxtibiMbaveraDa{\ro}MdikeyaMte itarAdhAyxsavenipudu noVDe tanonxLapxrXkaqti tAne poLedu kANisuvudu mativaMte tiLi maNiyoLu vaNaRveMtaMte sati mithAyxdhAyxsa\-miMtivu nAlukx AtamxMge deVhAdigaLadhAyxsa nirUpaNe (paramA. 222-10-6); matatxmalalxdadaralilx ahudeMba budidhxyeV shukitxkArajate daqSATxMtadiMda dhAyxsalakaSxNavahudu (viveVka. 36).}}
+\end{entry}
+
+%na
 \begin{entry}
 \word{naDegeTaTxvanu}
 \src{va}
