73-90 - 18 pages are corrected

--- a/tex-for-print/jss-282-501.tex
+++ b/tex-for-print/jss-282-501.tex
@@ -9348,7 +9348,7 @@ SaDavxgaRpUvaRkeYnaRyxseyxVtf SaDaMgAni yathAkarxmamf |
 
 \begin{entry}
 \word{niMdudoVgarasathxla}
-\meaning{\arthanonum{nUroMdusathxlagaLalilx oMdu; saMtaqpitx hoMdida liMgavu aikayxdalilx savxsavxrUpadiMda nelegoLuLxva sathxla:}
+\meaning{\arthanonum{nUroMdu sathxlagaLalilx oMdu; saMtaqpitx hoMdida liMgavu aikayxdalilx savxsavxrUpadiMda nelegoLuLxva sathxla:}
 \ullekha{parxsAdisathxla, niMdudoVgarasathxla, carAcaranAsitxsathxla, BAMDasathxla, BAjanasathxla, aMgaleVpanasathxla, savxyaparajAcnxnasathxla, BAvABAvanaSaTxsathxla, jAcnxnashUnayxsathxla, I oMbatutx mahAliMgasathxlaM\-gaLu (savasaM. 14; SaNumxKa. 780-357); niMdudoVgarasathxla ...jAcnxnashUnayxsathxla I oMbatutx mahAliMgasathxlaM\-gaLu (aKaMDeV. 252); liMgadalilx BinanxBAvavaLidu paramAnaMdadalilx pariNAmiyAgiruvudeV koMDuduparxsAdisathxla. hiVge paramAnaMdavanunx hoMdalu mahatfsathxlavu uMTAguvudu. adeV niMdudoVgarasathxlavu (shivAkoV. 66-108).}}
 \end{entry}
 
