all pages are sent to another proof

--- a/mainfile.tex
+++ b/mainfile.tex
@@ -12,8 +12,8 @@
 
 
 \input macros
-%\input dictionary1
-\input dictionary2
+%\input dictionary1 %for jss-001-281.tex
+\input dictionary4
 %\input anu-dictionary
 \begin{document}
 %\fontsize{12pt}{14pt}\selectfont
@@ -25,6 +25,7 @@
 \setlength{\columnseprule}{.5pt}
 %\input tex-for-print/jss-001-281.tex
 \input tex-for-print/jss-282-501.tex
+\input tex-for-print/ya-La.tex
 \newpage
 \input tex-for-print/anubandha-1.tex
 \end{multicols}
