--- a/tex-for-print/jss-282-501.tex
+++ b/tex-for-print/jss-282-501.tex
@@ -439,7 +439,9 @@ kalAH saMgaqhayx cAnayxtarx samaBayxcayxR yathAvidhi ||\\[1pt]
 jiVvaBAvanivaqtatxyXthaRM maqtaliMgAMgasaMginaH |\\[1pt]
 vagaRtarxyeYkayxsidadhxyXthaRM tatAtxvXdiVnf yoVjayeVtf sutaH ||\\[1pt]
 dAvxdasheV{\char'263}hani veY katAR mAheVshAnf saninxmaMtarxyX ca |\\[1pt]
-pitusatxdiVyapitArxdeyxYmaRheVshAdi savxrUpakeYH ||\\[1pt]
+pitusatxdiVyapitArxdeyxYmaRheVshAdi savxrUpakeYH ||
+\end{shl}
+\begin{shl}
 shivasAyujayxsidadhxyXthaRM kariSayxnf tatatxvXyoVjanamf |\\[1pt]
 naMdikeVshamahAkAlasaMjicnxnoVviRshavxdeVvayoVH ||\\[1pt]
 pituH pitAmahAdiVnAM maheVshAdisavxrUpiNAmf |\\[1pt]
@@ -953,7 +955,7 @@ parashiva eMdu tiLidavaneV tanusArAya:}
 
 \begin{entry}
 \word{tapa}
-\meaning{\artha{nirAhAra-alApxhAra-abAhAra(apf+AhAra)-vAyu\-BakaSxNa
+\meaning{\artha{nirAhAra-alApxhAra-abAhAra(apf+AhAra)\--vAyu\-BakaSxNa
  paNaR\-BakaSxNa-kaMdamUla modalAda AhAraseVvane, paMcAginxmadhayxdalilx
  kuLitukoLuLxvudu, ivu\-gaLu ugarxtapasusx:}
 \ullekha{muniloVkada munigaLelalxru tapaHsaMsArakokxLagAdaru (savasaM. 2; alalxma. 1283-378); vishAvxmitarxnu kaSxtirxyanAdaDeyU, tananx tapaHparxBAvadiMda bArxhamxNanAgalilalxve~?... (savasaM. 3; cenanxba. 1375-488); OMkAra parxBavoV janaH OMkAra parxBavoV tapaH ||... (savasaM. 13; bAlasaM. 234-82).}
@@ -1209,7 +1211,9 @@ tasAmxdadhikaqtAM veVdeV tatArx{\char'263}nadhikaqtAmapi ||\\[1pt]
 madiVyamUlamaMterxVNa pUjanaM savaRtoV varamf |\\[1pt]
 athavA tAMtirxkeYmaRMterxYrapi pUjA vishiSayxteV |\\[1pt]
 ESu BAtuyxpacArAthaRH sapxSaTxH savoRV{\char'263}pi BAmini ||\\[1pt]
-veYdikeVSu tu maMterxVSu liMgAdeVvwpacArikAtf |\\[1pt]
+veYdikeVSu tu maMterxVSu liMgAdeVvwpacArikAtf |
+\end{shl}
+\begin{shl}
 teVSu teVSUpacAreVSu veVdamaMtArx niyoVjitAH ||\\[1pt]
 samanuSiThxVyamAnoV{\char'263}thoRV yeVSu sapxSaTxM parxkAshateV |\\[1pt]
 teVSevxVva paThayxmAneVSu citatxM kaqteyxV{\char'263}nurajayxteV ||\\[1pt]
@@ -1258,7 +1262,9 @@ duHKagaLanunx duHKatarxyagaLeMdU kareyalAgide.}}
 \newmeaning{\arthanonum{purAtana BAratiVya dAshaRnikara parxkAra (cAvARkaranunxLidu) tApatarxya anAdi. sAveV avugaLa aMtayx eMba BaravaseyU ilalx. EkeMdare, namamx namamx kAyaRgaLige takakxMte aveV beVre beVre rUpagaLalilx muMdina janamxgaLalilxyU maru\-kaLisutatxve. moVkaSxveV (liMgAMgasAmarasayxveV) avugaLa aMtayx:}}
 \begin{shl}
 BUtAvx kamaRvashAjajxMtubArxRhamxNAdiSu jAtiSu |\\[1pt]
-tApatarxyamahAvahinxsaMtApAdf dahayxteV Baqshamf ||\\[1pt]
+tApatarxyamahAvahinxsaMtApAdf dahayxteV Baqshamf ||
+\end{shl}
+\begin{shl}
 kamaRmUleVna duHKeVna piVDayxmAnasayx deVhinaH |\\[1pt]
 AdhAyxtimxkAdinA nitayxM kutarx vishArxMtiriSayxteV ||\\[1pt]
 AdhAyxtimxkaM tu parxthamaM divxtiVyaM cAdhiBwtikamf |\\[1pt]
@@ -8087,7 +8093,9 @@ sAvitirxV shakitxrituyxkAtx cAdhAraM paqthiviV tathA ||\\[1pt]
 anuSuTxpf CaMdasA yukatxM vAsiSAThxSaRM tatheYva hi |\\[1pt]
 sAthxnaM pashicxmatoV vakatxrXM sadoyxVjAtaM tu barxhamxkamf ||\\[1pt]
 AyudhaM vajarxmeVvoVkatxM kalA nivaqtitxreVva ca |\\[1pt]
-guNaH kaThina EvoVkatxshacxkarxM tu caturasharxkamf ||\\[1pt]
+guNaH kaThina EvoVkatxshacxkarxM tu caturasharxkamf ||
+\end{shl}
+\begin{shl}
 javxladagenxVH parxkAshasutx karaNaM mana Eva ca |\\[1pt]
 pArxNavAyusamAyukatxM GArxNaM jAcnxneVMdirxyoV BaveVtf |\\[1pt]
 iteyxVvaM SoVDashAnAM tu nakArAkaSxramucayxteV ||
@@ -9898,7 +9906,9 @@ avasethxyU ilalx. AdudariMda parashivaneV nijavAda vasutx (va.pa.koV. 214):}
 \begin{shl}
 sadAcArAH bahuvidhAH parxmANeYrupavaNiRtAH |\\[1pt]
 saMkeSxVpataH paMcavidhA AcArA niviRsheVSaNAH ||\\[1pt]
-nitayxM neYmititxkaM kAmayxM nitayxneYmititxkaM tathA |\\[1pt]
+nitayxM neYmititxkaM kAmayxM nitayxneYmititxkaM tathA |
+\end{shl}
+\begin{shl}
 nitayxkAmayxmiti pArxhuH paMcadhA shAsatxrXkoVvidAH ||\\[1pt]
 tatarx nitayxM sAyamaginxhoVtarxmwpAsanAdikamf |\\[1pt]
 nitayxtavxM shurxticoVdayxtavxM parxmAdeV doVSasaMBavaH |
@@ -10216,7 +10226,9 @@ savikalapxnididhAyxsana:}}
 \medskip
 \begin{shl}
 tacacx divxvidhamf - savikalapxkaM niviRkalapxkaM ceVti |\\[1pt]
-niviRkalopxVpakArakaM savikalapxkamf |\\[1pt]
+niviRkalopxVpakArakaM savikalapxkamf |
+\end{shl}
+\begin{shl}
 niviRkalapxM paraM barxhamx sAkASxtakxtuRmaniVshavxrAH |\\[1pt]
 yeV maMdAsetxV{\char'263}nukaMpayxMteV savisheVSanirUpaNeYH ||\\[1pt]
 iti kalapxtarUketxVH savikalapxkanididhAyxsanaM ca yamaniyamAsanapArxNAyAmaparxtAyxhAra - dhAraNadhAyxnasahitamf |
@@ -21601,7 +21613,9 @@ joyxVtiSoTxVmabarxhamxhatAyxduyxtapxnonxV{\char'263} pUvaRsaMjacnxkaH ||\\
 saMsAkxraH kamaRshabedxVna baMdhoV{\char'263}nayxH parikiVtaRyxteV |\\
 puyaRSaTxkAMtaragataM budidhxtatatxvXmupAshirxtaH |\\
 suKaduHKavimoVhAdiPalayukatxshacx jAyateV |\\
-baMdhoV malABidhAnasutx savxrUpANAyxtamxnAM paqthakf ||\\
+baMdhoV malABidhAnasutx savxrUpANAyxtamxnAM paqthakf ||
+\end{shl}
+\begin{shl}
 jAcnxnakirxyAM ca satataM samAvaqtayx vayxvasithxtaH |\\
 nitayxshacx vAyxpakashecxYva BaveVdapi jaDAtamxkaH\\
 vidAyxvideyxVshavxrAdiVnAM shAriVrANAM ca kAraNamf |\\
@@ -22287,13 +22301,15 @@ tasAmxtf parxNavarUpaM tu mUtiRrUpamudAhaqtamf ||\\
 sAkalAyxdisutx yatapxMca mUtiRbarxhamxtaducayxteV |\\
 EteVSAM ceYva tatAtxvXnAM shivatatatxvXM parxBuH samxqqtamf ||\\
 EtaciCxvamayaM biVjaM shivANaRM ceVti kiVtiRtamf |\\
-tasAmxtf shudAdhxdi cAtAmxMtaM tatatxvXbarxhamx parxkiVtiRtamf ||\\
+tasAmxtf shudAdhxdi cAtAmxMtaM tatatxvXbarxhamx parxkiVtiRtamf ||\\[1pt]
 parxthamaM mAMsabiVjaM sAyxtf divxtiVyaM meVdasoV BaveVtf |\\
 taqtiVyaM SaSaThxbiVjaM sAyxtf catuthaRM sapatxmaM tathA ||\\
 paMcamaM paMcamaM vidAyxtf pAMcaBwtikamucayxteV |\\
 mAMsaM veY pAthiRvaM biVjaM meVdasoV hAyxpa ucayxteV ||\\
 SaSaThxM teVjoV vinidiRSaTxM sapatxmaM mArutAtamxkamf |\\
-paMcamaM voyxVmabiVjaM sAyxtf BUtabarxhemxVti kiVtiRtamf ||\\
+paMcamaM voyxVmabiVjaM sAyxtf BUtabarxhemxVti kiVtiRtamf ||
+\end{shl}
+\begin{shl}
 shivANeRV jiVvavaNARnAM saMyoVgAtf piMDamucayxteV |\\
 kameRVshaH piMDarUpatAvxtf piMDabarxhemxVti kiVtiRtaH ||\\
 IshAnaH puruSashecxYva aGoVroV vAmadeVvakaH |\\
@@ -23563,7 +23579,9 @@ davxyABimAnarAhitayxM BakitxkAMDoV\char'263yamucayxteV
 \smallskip
 \begin{shl}
 vakASxyXmi BakitxcihAnxni pirxVtirudArxkaSxdhAraNeV |\\
-BasamxtirxpuMDerxV vishAvxsaH sharxdAdhx paMcAkaSxreV shuBeV ||\\
+BasamxtirxpuMDerxV vishAvxsaH sharxdAdhx paMcAkaSxreV shuBeV ||
+\end{shl}
+\begin{shl}
 AsakitxH shivashabedxV cAtAyxdaroV liMgadhAraNeV |\\
 carAMtareV parA pirxVtiH shivakAyeRV manoVjayaH ||\\
 sheYvashAsetxrXV parA sharxdAdhx tadadhAyxpanamanavxhamf |\\
@@ -24011,7 +24029,9 @@ idu Bavacakarx athavA BavarATaLa (va.pa.koV. 285):}
 AshAnibadAdhxH shatashoV maqtAH purA\\
 tatheYva cAnAnxtaKxlu koVTishoV maqtAH |\\
 nitaMbiniVsavxNaRBuvAM kaqteV maqtAH\\
-sahasarxshasetxV BavaroVgapiVDitAH ||\\
+sahasarxshasetxV BavaroVgapiVDitAH ||
+\end{shl}
+\begin{shl}
 vicAyaRmANeV bahudhA guheVshavxra\\
 tavxdathaRmeVkoV{\char'263}pi maqtoV na daqshayxteV |
 \end{shl}
@@ -25726,7 +25746,9 @@ paMcabarxhamxparxkAreVNa paMcaviMshatiBeVdakamf ||\\
 parxthamaM mAMsabiVjaM sAyxtf divxtiVyaM meVdasoV BaveVtf |\\
 taqtiVyaM SaSaThxbiVjaM sAyxtf catuthaRM sapatxmaM tathA ||\\
 paMcamaM paMcamaM vidAyxtf pAMcaBwtikamucayxteV |\\
-mAMsaM veY pAthiRvaM biVjaM meVdasoV hAyxpa ucayxteV ||\\
+mAMsaM veY pAthiRvaM biVjaM meVdasoV hAyxpa ucayxteV ||
+\end{shl}
+\begin{shl}
 SaSaThxM teVjoV vinidiRSaTxM sapatxmaM mArutAtamxkamf |\\
 paMcamaM voyxVmabiVjaM sAyxtf BUtabarxhemxVti kiVtiRtamf ||
 \end{shl}
@@ -26774,17 +26796,17 @@ baMdhoV mAyiVyasaMjacnxsutx vidavxdiBxH parikiVtiRtAH |\\
 joyxVtiSoTxVmabarxhamxhatAyxdutapxnonxV{\char'263}pUvaRsaMjacnxkaH ||\\
 saMsAkxraH kamaRshabedxVna baMdhoV{\char'263}nayxH parikiVtayxRteV |\\
 puyaRSaTxkAMtaragataM budidhxtatatxvXmupAshirxtaH ||\\
-suKaduHKavimoVhAdiPalayukatxshacx jAyateV |
-\end{shl}
-\begin{shl}
+suKaduHKavimoVhAdiPalayukatxshacx jAyateV |\\
 baMdhoV malABidhAnasutx savxrUpANAyxtamxnAM paqthakf ||\\
 jAcnxnakirxyAM ca satataM samAvaqtayx vayxvasithxtaH |\\
 nitayxshacx vAyxpakashecxYva BaveVdapi jaDAtamxkaH ||\\
 vidAyxvideyxVshavxrAdiVnAM shAriVrANAM ca kAraNamf |\\
-sUkASxmXdi veYKayaRMtasayx kAraNaM beYMdavABidhaH ||
+sUkASxmXdi veYKayaRMtasayx kAraNaM beYMdavABidhaH ||\\
 shudAdhxdhavxvatiRnAM biMduroVdhw pAshavuBw matw ||\\
 mishArxdhavxvatiRnAmukwtx dwvx dwvx kAmARNavABidhw |\\
-EvameVtadidhx badAdhxnAM catuSaTxyamudAhaqtamf ||\\
+EvameVtadidhx badAdhxnAM catuSaTxyamudAhaqtamf ||
+\end{shl}
+\begin{shl}
 mishArxdhavxvAsiloVkAnAM savARha? (ga)tevxV ca satayxpi ||\\
 suKaM duHKa ca moVhashacx misharxmeVva parxvataRteV |\\
 ashudadhxyXdhavxsithxtAnAM tu kiMcidfjacnxtAvxlapxkataRqkeV ||\\
