correction in progress

--- a/tex-for-print/anubandha-1.tex
+++ b/tex-for-print/anubandha-1.tex
@@ -1589,3 +1589,25 @@ aneyxYrApAditaM Basamx akalapxmiti nishicxtamf |
 \meaning{\arthanonum{badalAgada parxpaMca. parxpaMcavu parxti kaSxNavU badalAgutitxdadxrU, adanunx hodadxda parxpaMcaveMdu kareyalu sidadhxrAmanige oMdu sapxSaTx kAraNavide: avanu A pada\-vanunx iMdirxyagoVcara parxpaMcakekx anavxyisade, adaroLage aMtasathxvAgiruva nitayxparatatatxvXkekx anavxyisutAtxne (va.pa.koV. 428):}
 \ullekha{I hodadxda parxpaMcikava nitayxda tatatxvXvanu madhayxmadalilx kaMDe kANA (savasaM. 4; sidadhxrA. 873-246).}}
 \end{entry}
+
+\begin{entry}
+\word{naTaTxliMga}
+\meaning{\arthanonum{guDiyalilx parxtiSAThxpisalapxTaTx liMga, sAthxvaraliMga, shivasharaNarige sAthxvaraliMgapUje niSidadhx.}}
+\end{entry}
+
+
+\begin{entry}
+\word{nishacxyada nijaEkatavx}
+\src{va}
+\meaning{\arthanonum{vAyxvahArikavAgi nAvu para\-shivana iravanunx opipxkoLuLxtetxVve, Adare adu keVvala vishAvxsaveV \hbox{horatu}, sAvxnuBAvadiMda tiLidukoMDudu\-dalalx, Adare, sharaNasathxlavanunx talupidavanige parashivana iravu sAvxnuBavada mUlaka nishacxyavAgutatxde.}}
+\smallskip
+\newmeaning{\arthanonum{\qquad parxpaMcavU, mAnavana deVheVMdirxyAdigaLU nashavxra matutx satata
+parivataRnegoLapaTiTxve. Adare sAvxnuBAvadalilx arita parashivanu I
+parivataRnegaLige atiVta, avaneV nija (satayx), shAshavxta.}}
+\smallskip
+\newmeaning{\arthanonum{\qquad vAyxvahArikavAgi nAvu veYvidhayxtevanunx anuBavisidare,
+ sAvxnuBAvadalilx aMga matutx liMga eraDU oMdAgi, aMgavu tananx
+ vayxkitxtavxvanunx kaLedukoMDu, tAnu parashivanalilxdedxVne,
+ iruvudu parashivanobabxneV eMba Ekatavxda arivAgutatxde (va.pa.koV. 220):}
+\ullekha{iSaTxliMgadalilx muTuTxtaTuTx balalxvaMge kaSaTx niderxya muTuTxva BeVdada, taTuTxva pariyinenxMtuToV ? iMtivaru muTaTxru, ariyaru, nishacxyada nija Ekatavxvanariyaru (savasaM. 8; moVLige. 1533-531).}}
+\end{entry}
