corrections in progress

--- a/tex-for-print/anubandha-1.tex
+++ b/tex-for-print/anubandha-1.tex
@@ -1611,3 +1611,27 @@ parivataRnegaLige atiVta, avaneV nija (satayx), shAshavxta.}}
  iruvudu parashivanobabxneV eMba Ekatavxda arivAgutatxde (va.pa.koV. 220):}
 \ullekha{iSaTxliMgadalilx muTuTxtaTuTx balalxvaMge kaSaTx niderxya muTuTxva BeVdada, taTuTxva pariyinenxMtuToV ? iMtivaru muTaTxru, ariyaru, nishacxyada nija Ekatavxvanariyaru (savasaM. 8; moVLige. 1533-531).}}
 \end{entry}
+
+\begin{entry}
+\word{paMcabarxhamxhaMgu}
+\src{va}
+\meaning{\arthanonum{sadoyxVjAta, vAmadeVva, aGoVra, tatupxruSa matutx IshAnareV paMcabarxhamxru. vAsatxvika\-vAgi ivaru shivana aidu  rUpa\-gaLu; shivaniMda huTiTxda I paMcabarxhamxru vishavxvanUnx  mAnavanige beVkAda deVheVMdirxyAdigaLanUnx saqSiTxsalu beVkAda  upAdAnakAraNavAda paMcaBUtagaLanunx saqSiTxsutAtxre. athavA kelavu  vacanakArara parxkAra shivashakitxya aidu rUpagaLAda aidu  BUtagaLige I paMca\-barxhamxru adhideVvate\-gaLu. aMdare,  paMcaBUtagaLiMdAda deVhavanunx saqSiTxsidudakekx nAvu I  paMcabarxhamxrige QuNigaLAgirabeVku. I athaRdalilx namamxlilxruva  paqthivx aMshavu adara adhi\-deVvateyAda sadoyxVjAtana haMgu, adeV  riVti jalavu vAmadeVvana, aginxyu aGoVrana, vAyuvu tatupxruSana hAgU AkAshavu IshAnana haMgu. I deVha namamxdalalx, parashivanu namage koTiTxruva sAla eMbudu idara athaR. I sAlavanunx nAvu Bakitx matutx nisAvxthaR\-teya mUlaka tiVrisabeVku:}
+\ullekha{paqthivx sadoyxVjAtana haMgu, jala vAmadeVvana haMgu, aginx aGoVrana haMgu, vAyu tatupxruSana haMgu, AkAsha IshAnana haMgu, paMcabarxhamxva maredu, OMkAra barxhamx\-vanari aiGaTa dUra rAmeVshavxraliMgava (savasaM. 8; meremiM. 1354-464).}}
+\end{entry}
+
+\begin{entry}
+\word{padamxgaLa{A}kaqti\-gaLu}
+\src{va}
+\meaning{\artha{shAkatxraMte aneVka vacanakAraru oMbatutx cakarx athavA
+ padamxgaLanunx naMbutAtxre. I \hbox{cakarx\-gaLu} sAmAnayx cakarxgaLaMte
+ vaqtAtxkAravirabeVkAgilalx. avu sAMkeVtika BASeyalilx ceYtanayxkeVMdarxgaLige anavxyisutatxve. I ceYtanayxkeVMdarx\-gaLu
+ iMdirxyagoVcaravalalxdidadxrU, shivayoVgi\-gaLu avugaLige
+ AkAraviruvudanunx tamamx anuBAvadalilx kaMDu\-koMDidAdxre. yAva
+ cakarxkekx yAva AkAravide eMbu\-dakekx vivara:} \ullekha{gudasAthxnadalilxruva
+ AdhAracakarxkekx catuSokxVNA\-kaqti ide; sAvxdhiSAThxnacakarxvu
+ dhanurAkaqtiyuLuLxdu; nABi\-sAthxnadalilxruva maNipUrakacakarxkekx
+ tirxkoVNAkaqti ide; haqdaya\-sAthxnadalilxruva anAhata\-cakarxkekx
+ SaTokxVNAkaqtiyide. kaMTha\-sAthxna\-dalilxruva vishudidhxcakarxvu
+ vatuRLAkAravuLaLxdudx, BUrxmadhayxdalilxruva AjAcnxcakarxvu
+ tamaMdhakAravuLaLxdu (savasaM. 13; bAlasaM. 1797-1403-246-251).}}
+\end{entry}
