correction in progress

--- a/tex-for-print/anubandha-1.tex
+++ b/tex-for-print/anubandha-1.tex
@@ -1635,3 +1635,155 @@ parivataRnegaLige atiVta, avaneV nija (satayx), shAshavxta.}}
  vatuRLAkAravuLaLxdudx, BUrxmadhayxdalilxruva AjAcnxcakarxvu
  tamaMdhakAravuLaLxdu (savasaM. 13; bAlasaM. 1797-1403-246-251).}}
 \end{entry}
+
+\begin{entry}
+\word{pariBarxmaNada sUtaka}
+\src{va}
+\meaning{\arthanonum{nAnu parashivananunx aritidedxVne enanxlu yArigU sAdhayxvilalx. EkeMdare ahaMBAvavanunx kaLedukoLaLxde avananunx ariyalu sAdhayxvilalx. ava\-nanunx arita meVle (ahaM) nAnu eMba BAva naSaTxvAguvudariMda nAnu parashivananunx aritidedxVne eMbudu asatayxvaSeTxV alalx, savxviroVdhavU Agutatxde. hAganunxvudu Barxmeya (pariBarxmaNada) lakaSxNa:}
+\ullekha{paripUNaRvAda paraMjoyxVtige parakekx koTuTx, A parava\-naridiheneMba pariBarxmaNada sUtakavilalx (savasaM. 8; mAdAdhU. 1230-429).}}
+\end{entry}
+
+\begin{entry}
+\word{pashupatiyabarxta}
+\meaning{\arthanonum{shivananunx kuritu mADuva varxta:} \ullekha{bAradu bAradu viSayige pashupatibarxtavu (savasaM. 1; basava. 771-196); ``barxhAmxdi pashugaLige oDeyanAda shivana saMbaMdha\-vAda SaDivxdhashiVlavanenxV aMgava mADikoMDu SaDivxdha\-varxta\-vanenxV pArxNava mADikoMDu AcarisuvaMtha AcaraNeyu" (basaTiV. {\rm\em{II,}} 153-772 TiVku).}}
+\end{entry}
+
+\begin{entry}
+\word{parxNavagaLanAda\-gaLu}
+\src{va}
+\meaning{\arthanonum{shariVradalilxruva navacakarxgaLige saMbaMdhisi\-daMte, dhAyxnasathxnAda shivayoVgige keVLibaruva oMbatutx bageya parxNavanAda\-gaLu:}
+\ullekha{I parxNavaMgaLa nAdaMgaLAvAveMdaDe: peNudxMbinAda, veVNunAda, GaMTAnAda, BeVrinAda, meVGanAda, parxNavanAda, kiMkiNinAda, agaNitanAda, divayxnAda (savasaM. 3; cenanxba. 1268-441).}}
+\end{entry}
+
+\begin{entry}
+\word{parxNavadaAkaqtigaLu}
+\src{va}
+\meaning{\arthanonum{parxNavaveMdare, OM namaH shivAya eMba Aru akaSxrada
+ maMtarxvAgidadxrU, A maMtarxvu shabadx athavA akaSxragaLiMda
+ racitavAgidadxrU, kelavu vacanakAraru shAkatxranunx anukarisi A
+ akaSxragaLige AkAragaLive eMdu heVLutAtxre. parxtha\-mAkaSxravu OM
+ tAraka savxrUpa uLuLxdu, divxtiVyAkaSxravu daMDakAkaqti uLuLxdu,
+ mUraneyadu kuMDalAkAravAgide, nAlakxneyadu adhaRcaMdArxkAravAgide,
+ aidaneyadakekx dapaRNA\-kaqti ide matutx Araneyadakekx joyxVtiya
+ AkAravide (va.pa.koV. 252):} \ullekha{inunx parxNavada lakaSxNavadeMteMdaDe: parxthama tAraka savxrUpavAgihudu. divxtiVya daMDasavxrUpavAgihudu. taqtiVya kuMDalAkAravAgihudu. catuthaR adhaRcaMdarxkAkAravAgihudu. paMcama dapaRNAkAravAgihudu. SaSaThx joyxVtisavxrUpavAgihudu noVDA. idakekx IshavxroVvAca: ``parxthamaM tArakA\-rUpaM| divxtiVyaM daMDa ucayxteV| taqtiVyaM kuMDalAkAraM| catuthaR cAdhaRcaMdarxkaM|| paMcamaM dapaRNAkAraM| SaSaThx joyxVtisavxrUpakaM| iti parxNava vijecnxVyaM| yadogxVpayxM varAnaneV||" iMteMdudAgi, aparxmANakUDalasaMgamadeVvA (savasaM. 13; bAlasaM. 501-252);
+matatxM, A shiSayxnu ele sadugxrusAvxmi, aKaMDajoyxVtimaRyavAgiha paramoVMkAra utapxtayxvanu nimamx mahAvAkayxdiMda nirUpisi, nimamx sAvxnuBAvadaqkikxniMda toVralu kaMDu suKiyAdenu. inunx SaDivxdha BUtaMgaLutapxtayx nAyxsasathxlavanu nirUpiseMdu binenxYsalu, A sadugxrusAvxmi nirUpisidaradeMteMdaDe: aKaMDajoyxVtimaRyavAgiha paramoVMkAra parxNavada joyxVtisavxrUpadalilx AtamxnutapxtayxvAdanu. A parxNavada dapaRNAkAradalilx AkAsha utapxtayxvAyitutx. A parxNavada adhaRcaMdArxkAdalilx vAyu utapxtayxvAyitutx. A parxNavada kuMDalAkAradalilx teVja utapxtayxvAyitutx. A parxNavada daMDakasavxrUpadalilx apupx utapxtayxvAyitutx. A parxNavada tArakasavxrUpadalilx paqthivx utapxtayxvAyitutx noVDA. idakekx citapxrXkAshAgameV: ``OMkAra joyxVtirUpeV ca| AtAmx ceYva samudaBxvaH| OMkAra dapaRNAkAreV| AkAshaM ca samudaBxvaM|| OMkAreV cAdhaRcaMderxV ca| vAyushecxYva samudaBxvaH| OMkAra kuMDalAkAreV| teVjashecxYva samudaBxvaM|| OMkAra daMDarUpeV ca| ApashecxYva samudaBxvaH| OMkAra tArakarUpeV| paqthivxshacx samudaBxvaH| iti SaSaThxBUtaM deVviV| sAthxna sAthxneV samudaBxma||" iMteMdudAgi, aparxmANakUDalasaMgamadeVvA (savasaM. 13; bAlasaM. 502-253); A aKaMDa joyxVtimaRya\-vAgiha paramoVMkAraparxNavada tArakAsavxrUpadalilx paqthivxyeMba mahA\-BUtavihudu. A parxNavada daMDasavxrUpadalilx apupxveMba mahABUtavihudu. A parxNavada kuMDalAkAradalilx teVjaveMba mahABUtavihudu. A parxNavada adhaRcaMdarxkadalilx vAyuveMba mahABUtavihudu. A parxNavada dapaRNAkAradalilx AkAshaveMba mahABUtavihudu. A parxNavada joyxVtisavxrUpadalilx AtamxneMba mahABUtavihudu noVDA. idakekx citipxMDAgameV: ``OMkAra tArakarUpeV| paqthivxBUtaM samAcareVtf| OMkAra daMDarUpeV ca| apupx BUta samAshirxtAH|| OMkAra kuMDalAkAreV| teVja\-BUtaH tathABaveVtf| OMkAra adhaRcaMderxV ca| vAyuBUtaM ca vataRteV|| OMkAra dapaRNAkAreV| voyxVmaBUtaM sadAshirxtAH| OMkAra joyxVtirUpeV ca| AtamxBUtAshirxtaM tathA| iti SaSaThxBUtaM deVviV| sAthxna sAthxneV samAcareVtf||" iMteMdudAgi. aparxmANakUDalasaMgamadeVvA (savasaM. 13; bAlasaM. 503-254); matatxM, A shiSayxnu ele sadugxrusAvxmi, SaDivxdhaBUtaMgaLutapxtayx nAyxsasathxlavanu nimamx mahAnuBAvavacanadiMda nirUpisi, nimamx mahAnuBAvadaqkikxniMda toVralu, kaMDu paramasuKiyAdenu. inunx BakatxmAheVshavxra parxsAdi pArxNaliMgi sharaNa aikayxrutapxtayx nAyxsa sathxlavanu nirUpiseMdu binenxYsalu, A sadugxrusAvxmi nirUpisidaradeMteMdaDe: aKaMDa joyxVtimaRyavAgiha paramoVMkAra parxNavada joyxVtisavxrUpadalilx aikayxnutapxtayxvAdanu. A parxNavada dapaRNAkAradalilx sharaNanutapxtayxvAdanu. A parxNavada adhaRcaMdarxkadalilx pArxNaliMgi utapxtayxvAdanu. A parxNavada kuMDalAkAradalilx parxsAdi utapxtayxvAdanu. A parxNavada daMDakasavxrUpadalilx maheVshavxra utapxtayxvAdanu. A parxNavada tArakasavxrUpadalilx BakatxnutapxtayxvAdanu noVDA. idakekx citapxrXkAshAgamoVtatxrasAreV: ``OMkAra joyxVtirUpeV ca| aikayxMtu samu\-daBxvaM| OMkAra dapaRNAkAreV| sharaNashacx samudaBxvaM|| OMkAreVcAdhaRcaMderxV ca| pArxNaliMgiV samudaBxvaM|| OMkAra kuMDalAkAreV| parxsAdiVshacx samudaBxvaM|| OMkAra daMDakarUpeV ca| mAheVshavxra samudaBxvaH| OMkAra tArakA\-rUpeV| BakatxshecxYva samudaBxvaH| iti SaDusathxlaM deVviV| sAthxnasAthxneVSu jAyateV|| iMteMdudAgi, aparxmANakUDalasaMgamadeVvA (\hbox{savasaM.} 13; bAlasaM. 504-254).}}
+\end{entry}
+
+\begin{entry}
+\word{parxNavadutapxtitx}
+\src{va}
+\meaning{\arthanonum{shUnayxsithxtiyalilxruva parashivanige saqSiTx\-mADabeVkeMba iceCx
+ uMTAdAga, modalu avaniMda citutx udayavAgi, A cititxniMda akAra,
+ ukAra, makAragaLeMba mUru akaSxra\-gaLu utapxtitxyAgutatxve. citutx
+ matutx I mUrakaSxra\-gaLu kUDidare parxNamavenisikoLuLxtatxde. ililx
+ gamanisabeVkAda aMshaveMdare parxNama jaDa shabadxvalalx, ada\-ralilx
+ citutx kUDide. AdarU adanunx yArU ucacxrisutitxlalx. yAvudeV vasutx
+ saqSiTxyAgabeVkAdarU kelavu badalAvaNegaLAgaleVbeVku, yAva
+ badalAvaNeyAgabeVkAdarU vasutxgaLalilx sapxMdanavAgaleVbeVku, yAva
+ sapxMdanavAgabeVkAdarU shabadx uMTAgaleVbeVku. A shabadx atayxMta
+ sUkaSxmXvAgidudx adu namamx kivige keVLisadirabahudu. aMtU
+ parashivanalilx uMTAda saqSiTxsabeVkeMba iceCxyiMda horaTa
+ parxNamavu aMtha oMdu modala sapxMdana:}
+\ullekha{niHkala shivatatatxvXdalilx \hbox{jAcnxna} citutx udayavAyitutx. A cititxniMda akAra ukAra makAragaLeMba akaSxra\-tarxyaMgaLAdavu, akAraveV nAda, ukAraveV biMdu, makAraveV kaLe. iMtiV tirxvidhakekx tAyi citutx. iMtiV nAlukx oMdA\-dalilx OMkAraveMba parxNavadutapxtitxyAyitutx (savasaM. 11; toVMTasi. 33-14).}}
+\end{entry}
+
+\begin{entry}
+\word{parxpaMcinaputatxLi}
+\src{va}
+\meaning{\arthanonum{paMcaBUtagaLiMdAda deVha:} 
+\ullekha{enageVkayAyx? nA parxpaMcina putathxLiM mAyikada mUlaBAMDa, Aturada BavaniLaya (savasaM. 5; akakxma. 94-33).}}
+\end{entry}
+
+\begin{entry}
+\word{parxsAdaliMgadaparxsananxtavx}
+\src{va}
+\meaning{\arthanonum{tananx tavxgiMdirxyada tudiyalilx parxsAdaliMgavanunx
+ parxtiSAThxpisikoMDavanu, yAva sapxshaRvanUnx liMga muTaTxde, tAnu
+ muTeTxnu eMdu parxtijecnx mADutAtxne. alalxde, avanu tananx
+ tavxgiMdirxyaveV shivana tavxgiMdirxyaveMdu tiLidu, sapxshaRnada
+ suKa tanagalalx, parashivanige eMdu tiLiyutAtxne. hiVge tavxkukx,
+ sapxshaRna, sapxshaRnada suKa \hbox{mUranUnx} parxsAdaliMgakekx apiRsida
+ sharaNanu parxsAdaliMgada parxsananxtege ahaRvAgutAtxne hAgU A
+ mUlaka, tavxgiMdirxyada duSapxrXBAvagaLiMda mukatxnAgutAtxne (va.pa.koV. 258).}}
+\newmeaning{\ni{parxsAda liMgasayx parxsananxtavxM - parxsAdaliMgada parxsananxtavxM}}
+\end{entry}
+
+\begin{entry}
+\word{parxsAdavilalxda UTa}
+\src{va}
+\meaning{\arthanonum{AdhAyxtimxka sAdhaneya pArxthamika haMtadalilx sAdhakanu
+ parxsAdaveMdare AhArapadAthaRveMdu tiLiyutAtxne. vishAlAthaRdalilx, AhAra\-veMdare keVvala bAyiya mUlaka seVvisuva padAthaRvaSeTxV
+alalx, jAcnxneVMdirxyagaLa mUlaka seVvisuva elalx viSayagaLU
+(rUparasagaMdhasapxshaRshabadxgaLelalxvU)
+AhAragaLeV. jAcnxneVMdirxyagaLige taMtamamx AhAraviSayagaLanunx
+koDadiruvudeV parxtAyxhAra. AdhAyxtimxka sAdhaneya unanxta haMtavanunx
+talupi sAdhakanu yAva riVtiya AhAragaLanUnx apiRsade, tananx
+jAcnxneVMdirxya, kameRVM\-dirxya, aMtaHkaraNagaLanunx parashivanige
+apiRsi, avugaLanenxV parxsAdavanAnxgi mADikoMDare Aga avanadu
+parxsAdavilalxda UTa (AhAravilalxda UTa):}
+\ullekha{guru\-vilalxda kUTa, liMgavilalxda noVTa, jaMgamavilalxda mAta, parxsAda\-vilalxda UTa, I nAlakxra beVTavilalxda kUTa (savasaM. 3; cenanxba. 1187-411)}}
+\end{entry}
+
+\begin{entry}
+\word{parxsAdave aMgavAdavanu}
+\src{va}
+\meaning{\arthanonum{tananxnenxV tAnu liMgakekx saMpUNaRvAgi apiRsikoMDu
+ shudadhxnAdavanu; avanu tanagAgi EnanUnx mADade, tAnu mADuvudelalxvU
+parashivanigAgi eMdu tiLidu mADutAtxne:} \ullekha{parxsAdave aMgavAdavana iravu eMtuTeMdaDe; oLagilalxda kuMBa oDedu hoVLAdaMte mariVcikA\-jalava tuMbi suridu aMgadaMtirabeVku (savasaM. 8; parxsAdi. 123-53).}}
+\end{entry}
+
+\begin{entry}
+\word{parxsAdiya aginxyaMga}
+\src{va}
+\meaning{\arthanonum{nABisAthxnadalilxruva maNi\-pUraka\-veMba cakarxdalilx athavA adaralilxruva aginxtatatxvXdalilx athavA icACxshakitxyalilx shivaliMga irutatxde. idanunx sAkASxtakxrisikoLuLxva sAdhakanige parxsAdi eMba hesaridudx, adanunx
+sAkASxtakxrisikoLaLxlu aginxtatatxvXda athavA icACxshakitxy
+duSapxriNAmagaLanunx kaDime mADabeVkAgutatxde. hiVge shudadhxvAda
+icACxshakitxge avadhAna Bakitx eMdu hesaru.}}
+\newmeaning{\arthanonum{\qquad icACxshakitxya (aginxya) duSapxriNAmagaLanunx kaDime mADuvudeMdare, vividha haMtagaLalilx apaRNeya athaRvanUnx
+ higigxsuvudu. modalu AhAravanunx parxsAdavanAnxgi mADikoMDu
+ seVvisutAtxne. anaMtara, nAvu noVDuva noVTa, mUsuva gaMdha, saviyuva ruci elalxvanUnx parashivaneV namage koTiTxruvudariMda avugaLanunx
+avanige apiRsi anaMtara nAvu anuBavisabeVku eMdu tiLiyutAtxne. iDiV
+parxpaMcaveV parashivana oMdu parxsAda eMdu tiLiyuvudu
+parxsAdisathxlada oMdu parxmuKa guNa. inUnx muMde hoVgi, avanu tananx \hbox{deVha},
+kameRVMdirxya, jAcnxneVMdirxya, aMtaHkaraNagaLelalxvanUnx apiRsi
+avugaLanunx shivana parxsAdaveMbaMte upayoVgisutAtxne. hiVge
+mADuvudariMda avanalilx sAvxthaRBAvanu kaDimeyAgi, Atamx shudadhxvAgutAtx
+hoVgutatxde. hiVge icACxshakitxya mUlaka, hecucx hecucx baMdhanada
+kaDege sAguva badalu liMgAMgasAmarasayxda kaDege sAguvudeV `aginxyanunx aMgamADikoLuLxvudu' eMbudara athaR:}
+\ullekha{BakatxriMge paqthivxyaMgavAgi, maheV\-shavxraMge apupxvaMgavAgi, parxsAdige aginxyaMgavAgi, pArxNaliMgige pavananaMgavAgi (savasaM. 8; moVLimA. 1972-667)}}
+\end{entry}
+
+\begin{entry}
+\word{parxsAdiyaparxsAda}
+\meaning{\arthanonum{viVrasheYvAcaraNe\-gaLu aDakavAgi\-ruva EkAdasha parxsAdagaLalilx oMdu:}
+\ullekha{samatAparxsAda-parxsAdiyaparxsAda-jaMgamaparxsAdava parxsAdaliMga mahA\-liMga-BAvaliMgadeVvaMge sujAcnxna, sadABxva, niHparxpaMcahasatxdiMda samapiRsi (savasaM. 10; gurusi. 739-427); parxsAdiyaparxsAda parxsAdiyaparxsAdavanunx jaMgamakekx koTuTx samarasaBoVga mADuvudu (shivAkoV. 84-162).}}
+\end{entry}
+
+\begin{entry}
+  \word{parxsidadhxparxsAdiya aMga}
+  \src{va}
+\meaning{\arthanonum{pArxNaliMgiyAdavanu tananx parxti iMdirxyada bAgilinalUlx
+ parashivananunx parxtiSAThxpisirutAtxne. \hbox{aMdare}, tAnu noVDuva modalu
+kaNiNxna bAgilinalelxV iruva parashiva noVDutAtxne. tAnu keVLuva
+modalu, kiviya bAgili\-nalelxV iruva parashiva keVLisikoLuLxtAtxne,
+itAyxdi. hiVge tiLidavanu idu oLeLxyadu, idu keTaTxdudx eMba
+BeVdavanunx mADuvudilalx. EkeMdare, shivApiRtavAda yAvudU
+ashudadhxvAgiralu sAdhayxvilalxveMdu avanu tiLididAdxne. avanige
+bisilU oMde beLadiMgaLU oMdeV aMtha parxsAdiya aMgavu parxsidadhx\-parxsAdiya aMgavenisikoLuLxtatxde:}
+\ullekha{parxsAdave aMga\-vAdavana iravu eMtuTeMdaDe! oLagilalxda kuMBa oDedu hoVLAdaMte mariVcikAjalava tuMbi surida aMgadaMtirabeVku (savasaM. 8; parxsAdi. 123-53); BAva taledoVrade janana maraNAdigaLalilx nAmarUpu kirxVge bArade nishacxya nijAMgaleVpa\-vAgikoMbudu parxsidadhxparxsAdiya aMga (savasaM. 8; parxleMbaM. 118-48).}}
+\end{entry}
+
+\begin{entry}
+\word{parxLayava geliyuvudu}
+\src{va}
+\meaning{\arthanonum{parxLayavAdAga jagatitxna jiVvarAshiyelalxvU
+ nAshavAguvudu. idarathaR mAnavana kaSaTxgaLelalxvU konegoMDavu
+ eMdalalx. parashivana ANatiyaMte rudarxparxLayavanunxMTumADuvudu
+ avana AjecnxyaMte barxhamx matutx saqSiTx mADali eMba
+ udedxVshadiMda. matetx saqSiTxyAdAga \hbox{namamx} parxLayapUvaR kamaRvu
+ namamx hosa janamxvanunx nidhaRrisutatxde. Aga nAvu hosa hosa
+ koVTalege oLagAgutetxVve. Adare liMgAMgasAmarasayxvanunx I
+ janamxdalelxV sAdhisidare, \hbox{muMdina} janamxvU iruvudilalx, nAvu
+ parxLayakUkx oLagAguvudilalx (8: 446):} \ullekha{ayAyx, nAvu guru liMga jaMgamada pAdoVdaka parxsAdasaMbaMdhigaLeMdu nuDiya koMba pAtakara muKava noVDalAgadu. adeVkeMdaDe, pAdoVdakava koMDa baLika, jananada beVra kitotxrasabeVku. parxsAdava koMDa baLike, parxLayava geliyabeVku. (savasaM. 8; maDimA. 465-179).}}
+\end{entry}
+
